🐛 Mobile: remove max-height to prevent head cutoff

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -861,6 +861,7 @@ footer p small a:hover {
         width: 80%;
         margin: auto;
         min-width: 0;
+        max-height: none;
     }
     .hero-testimonial {
         margin-top: -40px;
